objects/Yash_CodeScan_Training__c.object
<CustomObject>
    <description>This is a custom object created for the purpose of the ARM training.</description>
    <fields>
        <fullName>Quality_Gate_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This describes the status of the Quality Gate</description>
        <label>Quality Gate Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Gates__c</fullName>
        <description>This describes the information about the Quality Gates.</description>
        <label>Quality Gates</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Profiles__c</fullName>
        <label>Quality Profiles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>C#</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>LWC</fullName>
                </value>
                <value>
                    <fullName>SF Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Yash CodeScan Training</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Yash  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yash CodeScan Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>